--- a/about.html
+++ b/about.html
@@ -28,17 +28,95 @@
       <li><a target="_blank" href="Blog.html">Blog</a></li>
       <li><a target="_blank" class="active" href="About.html">About</a></li>
       <li><a target="_blank" href="Contact.html">Contact</a></li>
-      <li><a href="cart.html"><i class="ri-shopping-bag-line"></i></a></li>
+      <li><a href="#" class="open"><i class="ri-shopping-bag-line"></i></a></li>
     </ul>
   </nav>
 
-  <div class="menu">
-    <a href="cart.html"><i class="ri-shopping-bag-line"></i></a>
-    <i class="ri-menu-3-line"></i>
+  <div class="p-menu">
+    <a href="#" class="open"><i class="ri-shopping-bag-line"></i></a>
+    <i class="menu ri-menu-3-line"></i>
   </div>
 
   </div>
 </header>
+
+
+
+<!-- start cart section -->
+
+<section class="big-cart">
+  
+  <section class="section-p1" id="cart">
+    <div class="container">
+
+      <table width="100%">
+        <thead>
+          <tr>
+            <td>Remve</td>
+            <td>Image </td>
+            <td>product </td>
+            <td>price </td>
+            <td>Quantity </td>
+            <td>Subtotal </td>
+          </tr>
+        </thead>
+        <tbody> 
+          <tr>
+            <td><a href="#"><i class="ri-close-circle-line"></i></a></td>
+            <td><img src="img/products/f1.jpg" alt=""></td>
+            <td>Cartoon Astronaut T-Shirts</td>
+            <td>$118.19</td>
+            <td><input type="number" value="1"></td>
+            <td>$118.19</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
+
+  <section id="cart-add" class="section-p1">
+    <div class="container">
+
+      <div id="coupon">
+        <h3>Apply Coupon</h3>
+        <div>
+          <input type="text" placeholder="Enter You Coupon">
+          <button class="normal">Apply</button>
+        </div>
+      </div>
+
+      <div id="subtotal">
+        <h3>Cart Totals</h3>
+        <table>
+          <tr>
+            <td>Cart Subtotal</td>
+            <td>$335</td>
+          </tr>
+          <tr>
+            <td>Shipping</td>
+            <td>Free</td>
+          </tr>
+          <tr>
+            <td><strong>Total</strong></td>
+            <td><strong>$ 335</strong></td>
+          </tr>
+        </table>
+        <button class="normal"> Proceed to checkout </button>
+      </div>
+
+    </div>
+  </section>
+
+</section>
+
+<!-- end cart section -->
+
+
+
+
+
+
+
 
   <!-- start hero Section -->
 
