--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <div class="clos">
           <i class="ri-close-large-fill"></i>
         </div>
-        <li><a target="_blank" class="active" href="index.html">Home</a></li>
-        <li><a target="_blank" href="shop.html">Shop</a></li>
-        <li><a target="_blank" href="Blog.html">Blog</a></li>
-        <li><a target="_blank" href="About.html">About</a></li>
-        <li><a target="_blank" href="Contact.html">Contact</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="shop.html">Shop</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="#" class="open"><i class="ri-shopping-bag-line"></i></a></li>
       </ul>
     </nav>
